refactor: improve the loading of the vectors on reference loader